# mdclip

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
scripts/: browser-clip-script.sh  defuddle-extract.js
src/mdclip/: __init__.py  academic.py  builtin.py  cli.py  cli_common.py  completion.py  config.py  console.py  cookies.py  extractor.py  frontmatter.py  inputs.py  news.py  output.py  ratelimit.py  selector.py  templates.py
src/mdclip/data/: completion.bash
src/mdclip/data/academic/: domains.yml  paths.yml
src/mdclip/data/docs/: domains.yml  paths.yml
src/mdclip/data/edu/: domains.yml  paths.yml
src/mdclip/data/gov/: domains.yml  paths.yml
src/mdclip/data/longform/: domains.yml  paths.yml
src/mdclip/data/news/: domains.yml  paths.yml
src/mdclip/data/scitech/: domains.yml  paths.yml
src/mdclip/data/social/: domains.yml  paths.yml
src/mdclip/data/wiki/: domains.yml  paths.yml
src/mdclip/filters/: __init__.py  academic.py  docs.py  edu.py  gov.py  longform.py  news.py  scitech.py  social.py  wiki.py
tests/: test_formatter.py
